<resources>
    <string name="app_name">COVID UPDATE</string>
    <string name="ID">Tugas Ujian Akhir Semester</string>
    <string name="ID2">Pemrograman Perangkat Bergerak</string>
    <string name="summary">Ringkasan</string>
    <string name="indonesia">Indonesia</string>
    <string name="info">Info</string>
    <string name="about">Tentang</string>
    <string name="setting">Pengaturan</string>
    <string name="not_update">Data Riwayat Belum Di Update</string>
    <string name="confirmed">Positif</string>
    <string name="recovered">Sembuh</string>
    <string name="deaths">Meninggal</string>
    <string name="legends">Ket :</string>
    <string name="world_summary_data">Ringkasan Data Dunia</string>
    <string name="daily_notif">Notifikasi Harian</string>
    <string name="key_daily_reminder">daily reminder key</string>
    <string name="daily_reminder_summary">Pengingat Harian Tiap Jam 08:00</string>
    <string name="daily_reminder_setup">Pengingat Harian Di Atur</string>
    <string name="daily_reminder_canceled">Pengingat Harian Dibatalkan</string>
    <string name="notif_title">Check Aplikasi Untuk Melihat Data Baru</string>
    <string name="hospital">Rumah Sakit</string>
    <string name="symptoms">Gejala</string>
    <string name="prevention">Pencegahan</string>
    <string name="redirect">Menuju Halaman…</string>
    <string name="advice_from_who">Saran Dari WHO</string>
    <string name="aboutLabelSubtitle">" Ini adalah aplikasi untuk mengetahui berita tentang penyakit Virus Corona"</string>
    <string name="aboutLabelVersion">Version</string>
    <string name="aboutLabelDeveloper">Developer</string>
    <string name="aboutTextDeveloper1">Alvin Zulham Firdananta</string>
    <string name="aboutLabelUIUX">UI/UX Designer</string>
    <string name="aboutUIUX1">Ahmad Naufal Athaya</string>
    <string name="aboutUIUX2">Dewina Putri Firmani</string>
    <string name="aboutLabelTester">App Tester</string>
    <string name="aboutTextTester1">Muhammad Syafiqul Mahdi</string>
    <string name="aboutTextTester2">Muhammad Riski Nur Faris</string>
    <string name="aboutLabelDatabase">Database</string>
    <string name="indonesia_summary_data">Ringkasan Data Indonesia</string>
    <string name="source_kemenkes">Sumber : Kemenkes</string>
    <string name="source_JHU">Sumber : JHU CSSE</string>
    <string name="province">Provinsi</string>
    <string name="read_more">Baca</string>
    <string name="made_with">Made With</string>
    <string name="for_human">For Human</string>
    <string name="editor">Redaksi</string>
    <string name="zero">0</string>
    <string name="history">Riwayat</string>
    <string name="sumber" >Sumber</string>
    <string name="sumber1" >covid19.mathdro.id</string>
    <string name="sumber2" >api.kawalcorona.com</string>
    <string name="sumber3" >covid19.go.id</string>
    <string name="sumber4" >flaticon.com</string>
    <string name="openSource" >Aplikasi Ini Bersifat Open Source dan Terbuka Bagi Siapapun Yang Ingin Mengembangkannya</string>
    <string name="github" >Temukan Saya di Github</string>
    <string name="news" >Berita Terkini</string>
    <string name="hoax" >Hoax Buster</string>
    <string name="maps" >Peta Sebaran</string>
    <string name="education" >Edukasi</string>
    <string name="QnA" >Tanya Jawab</string>
    <string name="contact" >Kontak</string>

</resources>
